Next.js initial config

--- a/package.json
+++ b/package.json
@@ -1,30 +1,20 @@
 {
-  "name": "congress-registration",
-  "version": "1.0.0",
-  "description": "congress-registration",
-  "main": "index.js",
+  "name": "congress",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "vite serve src",
-    "build": "vite build --emptyOutDir",
-    "preview": "vite preview",
-    "publish": "firebase deploy --only hosting"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "vite": "^2.8.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/KeeghanM/congress-registration.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/KeeghanM/congress-registration/issues"
-  },
-  "homepage": "https://github.com/KeeghanM/congress-registration#readme",
-  "dependencies": {
-    "animate.css": "^4.1.1",
-    "firebase": "^9.6.7"
+    "eslint": "8.9.0",
+    "eslint-config-next": "12.1.0"
   }
 }
